Fix the overflow issue of tags

--- a/openmetadata-ui/src/main/resources/ui/src/styles/components/size.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/components/size.less
@@ -62,6 +62,9 @@
 .w-min-0 {
   min-width: 0;
 }
+.w-max-17 {
+  max-width: 17rem;
+}
 .w-max-20 {
   max-width: 20%;
 }
@@ -125,6 +128,9 @@
 }
 .w-min-15 {
   min-width: 15rem;
+}
+.w-min-17 {
+  min-width: 17rem;
 }
 .w-min-20 {
   min-width: 20rem;
